--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,45 @@ body {
     flex-direction: column;
 }
 
+.home_page_middle_content {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.carousel {
+    /*background-color: rgba(39, 40, 41, 0.7);*/
+    width: 20%;
+    height: 30vh;
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .swiper {
+    width: 80%;
+    height: fit-content;
+  }
+  
+  .swiper-slide img {
+    width: 100%;
+    height: 20vh;
+  }
+  
+  .swiper .swiper-button-prev , .swiper .swiper-button-next {
+    color: #fff;
+  }
+  
+  .swiper .swiper-pagination-bullet-active {
+    background: #fff;
+  }
+
+  .carousel_visit_btn {
+    background-color: #AB420F;
+    border-radius: 20px;
+    border: none;
+    font-size: 18px;
+  }
+
+  .game_site_header {
+    text-align: center;
+  }
