--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,14 @@ body {
     padding: 0;
     box-sizing: border-box;
     color: #fff;
+    
   }
 
 
-/*-----------Home Page-------------*/
+/*----------------------Home Page-----------------------*/
 .home_page {
     background-color: black;
-    height: 100hv;
+    height: 100vh;
 }
 
 .navbar {
@@ -82,33 +83,155 @@ body {
     height: 30vh;
     display: flex;
     flex-direction: row;
-  }
+}
   
-  .swiper {
+.swiper {
     width: 80%;
     height: fit-content;
-  }
-  
-  .swiper-slide img {
+}
+
+.swiper-slide img {
     width: 100%;
     height: 20vh;
-  }
-  
-  .swiper .swiper-button-prev , .swiper .swiper-button-next {
-    color: #fff;
-  }
-  
-  .swiper .swiper-pagination-bullet-active {
-    background: #fff;
-  }
+}
 
-  .carousel_visit_btn {
+.swiper .swiper-button-prev , .swiper .swiper-button-next {
+    color: #fff;
+}
+
+.swiper .swiper-pagination-bullet-active {
+    background: #fff;
+}
+
+.carousel_visit_btn {
     background-color: #AB420F;
     border-radius: 20px;
     border: none;
     font-size: 18px;
+}
+
+.game_site_header {
+    text-align: center;
+}
+
+/*_____________________________________________________*/
+
+
+
+/*--------------------Home Page-----------------------*/
+.game_site_page {
+    background-color: black;
+    height: 100vh;
+}
+
+.game_site_top_content {
+    display: flex;
+    justify-content: space-around;
+}
+
+.carousel-element {
+    text-align: center;
+    border-radius: 30px;
+    padding: 40px;
+    margin-top: 160px;
+  }
+  
+  .wrapper .outer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .wrapper .card{
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 95px;
+    padding-bottom: 55px;
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    justify-content: space-between;
+    box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+    animation: animate 15s linear infinite;
+    animation-delay: calc(3s * var(--delay));
+  }
+  
+  .outer:hover .card{
+    animation-play-state: paused;
+  }
+  .wrapper .card:last-child{
+    animation-delay: calc(-3s * var(--delay));
+  }
+  @keyframes animate {
+    0%{
+      opacity: 0;
+      transform: translateY(100%) scale(0.5);
+    }
+    5%, 20%{
+      opacity: 0.4;
+      transform: translateY(100%) scale(0.7);
+    }
+    25%, 40%{
+      opacity: 1;
+      pointer-events: auto;
+      transform: translateY(0%) scale(1);
+    }
+    45%, 60%{
+      opacity: 0.4;
+      transform: translateY(-100%) scale(0.7);
+    }
+    65%, 100%{
+      opacity: 0;
+      transform: translateY(-100%) scale(0.5);
+    }
+  }
+  .card .content{
+    display: flex;
+    align-items: center;
+  }
+  .wrapper .card .img{
+    height: 20vh;
+    width: 140%;
+    position: absolute;
+    left: -15px;
+    border-radius: 20%;
+    border-color: #CD4C0E;
+    padding: 5px;
+  }
+  .card .img img{
+    height: 100%;
+    width: 100%;
+    border-radius: 20%;
+    object-fit: cover;
+  }
+  .card .details{
+    margin-left: 80px;
   }
 
-  .game_site_header {
+  .game_site_page_carousel_book_button {
+    margin-top: 200px;
+    margin-left: 20px;
+  }
+
+  .game_site_bottom_content {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .game_site_address_info {
+    display: flex;
+  }
+
+  .game_site_address_info img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .game_site_middle_paragraphs {
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    margin-right: 600px;
   }
